--- a/Views/Windows/AddFrameWindow.xaml
+++ b/Views/Windows/AddFrameWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="FramingWorkshop.View.AddFrameWindow"
+﻿<Window x:Class="FraimingWorkShop.Views.Windows.AddFrameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FramingWorkshop.View"
+        xmlns:local="clr-namespace:FraimingWorkShop.Views.Windows"
         mc:Ignorable="d"
         Title="AddFrameWindow" Height="450" Width="800">
     <Grid>
