--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -1,12 +1,88 @@
-﻿<Window x:Class="FraimingWorkShop.MainWindow"
+﻿<Window x:Class="FraimingWorkShop.Views.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FraimingWorkShop"
+        xmlns:VM="clr-namespace:FraimingWorkShop.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+    <Window.DataContext>
+        <VM:FraimingWorkShopVM/>
+    </Window.DataContext>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="Помощь">
+                <MenuItem Header="О программе"></MenuItem>
+            </MenuItem>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBox Text="{Binding Status}"></TextBox>
+            </StatusBarItem>
+            <StatusBarItem>
+                <ProgressBar Width="150" Height="14" Value="50"></ProgressBar>
+            </StatusBarItem>
+        </StatusBar>
+        <TabControl>
+            <TabItem Header="Калькулятор">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" x:Name="FrameGrid">
+                        <CheckBox x:Name="FrameGridUsed" IsChecked="True"></CheckBox>
+                    </Grid>
+                    <Grid Grid.Row="1" x:Name="GlassGrid"></Grid>
+                    <Grid Grid.Row="2" x:Name="CardboardGrid"></Grid>
+                    <Grid Grid.Row="3" x:Name="ResultGrid"></Grid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Прайс">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="8*"/>
+                    </Grid.ColumnDefinitions>
+                    <GroupBox Header="Таблицы" Grid.Column="0">
+                        <ListBox x:Name="TableList">
+                            <ListBoxItem x:Name="Frame" >Багет</ListBoxItem>
+                            <ListBoxItem x:Name="Cardboard">Картон</ListBoxItem>
+                            <ListBoxItem x:Name="Hanger">Подвесы</ListBoxItem>
+                            <ListBoxItem x:Name="Periphery">Остальное</ListBoxItem>
+                        </ListBox>
+                    </GroupBox>
+                    <Grid Grid.Column="1">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="8*"/>
+                            <RowDefinition Height="2*"/>
+                        </Grid.RowDefinitions>
+                        <DataGrid Grid.Row="0" x:Name="PriceDataGrid" ></DataGrid>
+                        <Grid Grid.Row="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="20*"/>
+                                <RowDefinition Height="20*"/>
+                                <RowDefinition Height="14*"/>
+                            </Grid.RowDefinitions>
+                            <Grid Row="2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                </Grid.ColumnDefinitions>
+                                <Button Grid.Column="0" Command="{Binding DataViewCommand}">Показать</Button>
+                                <Button Grid.Column="1" Command="{Binding DataSaveCommand}">Сохранить</Button>
+                                <Button Grid.Column="2">Найти</Button>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </TabItem>
+        </TabControl>
+    </DockPanel>
 </Window>
